# money-warp

./: .gitignore  .python-version  404.html  CONTRIBUTING.rst  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_notebook_functionality.py  tox.ini
.cursor/rules/: chat-triage.mdc  dependency-management.mdc  development.mdc  managed-skills.mdc  python-developer.mdc  quality.mdc  test-patterns.mdc
.cursor/skills/code-review/: .managed-skill.md  SKILL.md
.cursor/skills/create-dev-workflow/: .managed-skill.md
.cursor/skills/describe-loan/: SKILL.md
.cursor/skills/dev-workflow/: SKILL.md
.cursor/skills/feature-dev-workflow/: SKILL.md
.cursor/skills/fix-bug/: .managed-skill.md  SKILL.md
.cursor/skills/knowledge-management/: SKILL.md
.cursor/skills/manage-dependencies/: .managed-skill.md  SKILL.md
.cursor/skills/python-best-practices/: .managed-skill.md  SKILL.md
.cursor/skills/python-developer/: .managed-skill.md
.cursor/skills/quality-assurance/: SKILL.md
.cursor/skills/validate-loan/: SKILL.md
.cursor/skills/write-pytest/: .managed-skill.md  SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: on-release-main.yml  on-release-pypi.yml
docs/: index.md  modules.md
docs/examples/: cash_flow.md  date_generation.md  fines.md  interest_rates.md  late_fees.md  marshmallow.md  money.md  present_value_irr.md  quickstart.md  sqlalchemy.md  tax.md  time_machine.md  timezone.md
examples/cash_flow/: index.html
examples/date_generation/: index.html
examples/fines/: index.html
examples/interest_rates/: index.html
examples/marshmallow/: index.html
examples/money/: index.html
examples/present_value_irr/: index.html
examples/quickstart/: index.html
examples/sqlalchemy/: index.html
examples/tax/: index.html
examples/time_machine/: index.html
examples/timezone/: index.html
knowledge/: architecture.md  billing_cycle.md  billing_cycle_loan.md  cash_flow.md  credit_card.md  date_utils.md  engines.md  environment.md  ext.md  loan.md  rate.md  tax.md  tvm.md  tz.md  warp.md  working_day.md
modules/: index.html
money_warp/: __init__.py  cash_flow.py  date_utils.py  engines.py  interest_rate.py  money.py  present_value.py  rate.py  time_context.py  tz.py  warp.py  working_day.py
money_warp/billing_cycle/: __init__.py  base.py  monthly.py  statement.py
money_warp/billing_cycle_loan/: __init__.py  billing_cycle_loan.py  engines.py  mora_rate_resolver.py
money_warp/cash_flow/: __init__.py  entry.py  flow.py  item.py  query.py
money_warp/credit_card/: __init__.py  credit_card.py  statement.py
money_warp/engines/: __init__.py  allocation.py  constants.py  fines.py  forward_pass.py  interest.py
money_warp/ext/: __init__.py  marshmallow.py  sa.py
money_warp/ext/sa/: __init__.py  bridge.py  compat.py  types.py
money_warp/loan/: __init__.py  engines.py  fine_tracker.py  installment.py  interest_calculator.py  loan.py  payment_ledger.py  scheduler.py  settlement.py  settlement_engine.py  tvm.py
money_warp/loan/engines/: __init__.py  fine_tracker.py  interest_calculator.py  payment_ledger.py  settlement_engine.py
money_warp/models/: __init__.py  allocation.py  installment.py  settlement.py  statement.py
money_warp/scheduler/: __init__.py  base.py  inverted_price_scheduler.py  price_scheduler.py  schedule.py
money_warp/tax/: __init__.py  base.py  grossup.py  iof.py
notebooks/: README.md  simple_loan_demo.ipynb
planning/: backlog.md  done.md  environment-setup.md  general.md  interactive-loan-notebook.md  late-payment-fines.md
search/: search_index.json
tests/: test_cash_flow.py  test_date_utils.py  test_foo.py  test_interest_rate.py  test_inverted_price_scheduler.py  test_irr.py  test_loan.py  test_money.py  test_present_value.py  test_price_scheduler_validation.py  test_rate.py  test_schedule_equivalence.py  test_temporal_cashflow.py  test_tz.py  test_warp.py  test_working_day.py
tests/billing_cycle/: test_monthly.py
tests/billing_cycle_loan/: conftest.py  test_billing_cycle_due_dates.py  test_creation.py  test_late_payments.py  test_schedule.py  test_settlements.py  test_statements.py  test_variable_mora.py  test_warp.py  test_working_day_penalty.py
tests/credit_card/: conftest.py  test_cash_flow.py  test_creation.py  test_fines.py  test_interest.py  test_minimum_payment.py  test_payment.py  test_purchase.py  test_refund.py  test_statement.py  test_warp_integration.py
tests/engines/: test_allocation_invariants.py  test_balance_invariants.py  test_interest_invariants.py  test_schedule_invariants.py  test_sequential_coverage.py
tests/ext/: test_marshmallow.py  test_sa.py
tests/ext/sa/: conftest.py  test_sa_bridge.py  test_sa_integration.py  test_sa_money_type.py  test_sa_rate_type.py
tests/invariants/: conftest.py  strategies.py  test_allocation.py  test_allocation_completeness.py  test_balance.py  test_interest.py  test_schedule.py  test_sequential_coverage.py
tests/loan/: conftest.py  test_anticipation.py  test_balance.py  test_cash_flow.py  test_creation.py  test_cross_timezone.py  test_external_schedule_verification.py  test_fines.py  test_installment.py  test_late_fees.py  test_loan_with_tax.py  test_mora_interest.py  test_overpayment.py  test_pay_installment.py  test_payment_methods.py  test_payment_tolerance.py  test_payments.py  test_same_time_payments.py  test_schedule.py  test_settlement.py  test_settlement_spill.py  test_subcent_balance_bug.py  test_tvm.py  test_working_day_penalty.py
tests/loan/external_validation/: _investigate_csharp_precision.py  test_external_payment.py  test_external_schedule_validation.py  test_external_schedule_verification.py  test_external_schedule_verification_2026_04_10.py
tests/loan/external_validation/fixtures/: 2026-04-10.json  simple-2026-04-10.json
tests/loan/settlements/: conftest.py  test_allocation_completeness.py
tests/loan/settlements/antecipation/: test_single_anticipation.py
tests/tax/: test_grossup.py  test_iof.py
(+16 files in other folders)
