[tool.poetry]
name = "money_warp"
version = "0.0.1"
description = "MoneyWarp – Bend time. Model cash."
authors = ["Robbin dev team <fdev@robbin.com.br>"]
repository = "https://github.com/tomas_correa/money-warp"
documentation = "https://tomas_correa.github.io/money-warp/"
readme = "README.md"
packages = [
  {include = "money_warp"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
scipy = "^1.10.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"


[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
ipywidgets = "^8.1.7"
plotly = "^6.3.1"
pandas = "^2.3.3"
python-dateutil = "^2.9.0.post0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["money_warp"]

[tool.deptry]
ignore_transitive = [
    "ipython",
    "ipywidgets", 
    "plotly"
]
extend_exclude = [
    "notebooks/",
    "test_notebook_functionality.py"
]


