[tool.poetry]
name = "money_warp"
version = "0.1.0"
description = "MoneyWarp – Bend time. Model cash."
license = "MIT"
authors = ["Tomas Correa <tomas.correa@gmail.com>"]
repository = "https://github.com/tomascorrea/money-warp"
documentation = "https://tomascorrea.github.io/money-warp/"
readme = "README.md"
keywords = ["finance", "money", "loan", "interest-rate", "cash-flow", "time-value-of-money"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
  {include = "money_warp"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
scipy = "^1.10.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
pre-commit = "^2.20.0"
tox = "^3.25.1"
hypothesis = {version = "^6.151.9", python = ">=3.10"}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"
mkdocs-material = "^9.7.2"


[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
ipywidgets = "^8.1.7"
plotly = "^6.3.1"
pandas = "^2.3.3"
python-dateutil = "^2.9.0.post0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["money_warp"]

[tool.deptry]
ignore_transitive = [
    "ipython",
    "ipywidgets", 
    "plotly"
]
extend_exclude = [
    "notebooks/",
    "test_notebook_functionality.py"
]


